Change classes, DRYed code
Signed-off-by: Ivan Hudzynskyi <ivanhudzinskyi2000@gmail.com>

--- a/static/styles.css
+++ b/static/styles.css
@@ -28,8 +28,6 @@ main {
     width: 80%;
     height: 100vh;
     margin: auto;
-
-    /* border: 1px white dotted; */
 }
 
 #chat {
@@ -81,42 +79,39 @@ main {
 #messages {
     width: 100%;
     height: 100%;
-    padding: 0 0.5em;
+    padding: 0.5em 0.5em 0 0.5em;
     box-sizing: border-box;
     overflow-y: auto;
 }
 
-.message > p, .my-message > p {
+.msg p {
     margin: 0;
 }
 
-.message b {
+.msg b {
     display: block;
     margin-bottom: 5px;
 }
 
-.message {
+.msg {
     width: fit-content;
     width: -moz-fit-content;
-    background-color: #4e4e4e;
     border-radius: 0.5em;
     max-width: 100%;
     margin-bottom: 0.5em;
     padding: 0.5em 1em;
 }
 
-.my-message {
-    width: fit-content;
-    width: -moz-fit-content;
+.msg-my {
     background-color: #2b72ed;
-    border-radius: 0.5em;
-    margin: 0.5em 0 0.5em auto;
-    max-width: 100%;
-    padding: 0.5em 1em;
+    margin-left: auto;
+}
+
+.msg-other {
+    background-color: #4e4e4e;
 }
 
 #input-row {
-    /* margin-top: 1em; */
     display: table-row;
     height: fit-content;
     box-sizing: border-box;
